css/style.css
@import url('https://fonts.googleapis.com/css?family=Raleway|Roboto+Slab&display=swap');

/**
 * Base Styles
 */
 html {
    -ms-text-size-adjust: 100%; /* 2 */
    -webkit-text-size-adjust: 100%; /* 2 */
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

*, *::before, *::after {
    -webkit-box-sizing: inherit;
            box-sizing: inherit;
}

* {
    max-width: 55ch;
}

html, body, div,
header, nav, section,
article, form, main,
footer {
    max-width: none;
}

html, body {
    height: 100%;
    min-height: 100%;
}

body {
    margin: 0 auto;
    padding: 0;
    font-family: 'Roboto Slab', serif;
    font-weight: 400;
    line-height: 1.45;
    font-style: normal;
    text-rendering: optimizeLegibility;

    /* background: feature#fff8e7; */

}

html {
    scroll-behavior: smooth;
}

ul,
figure {
    margin: 0;
    padding: 0;
}

h1, h2, h3, 
h4, h5, h6,
p {
    margin: 0;
}

p {
    max-width: 55ch;
    margin-bottom: 1.3em;
}

h1, h2, h3,
h4, h5, h6 {
    font-family: 'Raleway', sans-serif;
    line-height: 1.2;
    font-weight: inherit;
}

ul {
    list-style: none;
}

html {
    font-size: 16px;
  }

@media screen and (min-width: 320px) {
    html {
      font-size: calc(16px + 6 * ((100vw - 320px) / 680));
    }
  }
@media screen and (min-width: 1000px) {
    html {
      font-size: 22px;
      }
}

/* Responsive images */
img {
    height: auto;
    max-width: 100%;
    vertical-align: middle;
    border: 0;
    border-style: none;
}

@media (min-width: 600px) {
    figure img {
        -o-object-fit: cover;
           object-fit: cover;
        min-width: 100%;
        min-height: 100%;
    }
}

/* Spacing utilities */
.mb-05 {
    margin-bottom: 0.5em;
}

.mb-1 {
    margin-bottom: 1em;
}

.mb-2 {
    margin-bottom: 2em;
}

.mb-3 {
    margin-bottom: 3em;
}

.mb-4 {
    margin-bottom: 4em;
}

.text-c {
    text-align: center;
}
/* END Spacing utilities */


/* Temp */
.container {
    margin-right: auto;
    margin-left: auto;
    padding-right: 10px;
    padding-left: 10px;
    width: 100%;
    max-width: 100%;
}

@media (max-width: 600px) {
    .hide-m {
        display: none; 
    }
}

@media (min-width: 768px) {
    .container {
        width: 750px;
    }
}

@media (min-width: 992px) {
    .container {
        width: 970px;
    }
}

@media (min-width: 1200px) {
    .container {
        width: 1170px;
    }
}
/* end temp */

/* Header info */
.header {
    display: flex;
    flex-direction: column;
    padding: 0.5em 0;
}

.header__logo {
    margin-left: 5%;
}

.header div {
    margin: 1.5em 0 0 5%;
}

.header ul li {
    display: inline-block;
    padding: 0 1.4em 0 0;
    font-size: 0.9em;
}

.header__title,
.header ul li a {
    text-decoration: none;
    color: #ed3330;
}

.header li a.active {
    color: #000000;
    border-bottom: 2px solid #000000;
    font-weight: 300;
}

@media screen and (min-width: 600px) {
    .header {
        flex-direction: row;
        justify-content: space-between;
    }
    .header__logo {
        margin-left: 2.3em;
    }
    .header div {
        align-self: center;
        margin: 0 0.8em 0 0;
    }
}

/* End Header info */

/* Hero */
.hero {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    align-self: center;
    background-image: linear-gradient(rgba(52, 79, 170, 0.4),rgba(52, 79, 170, 0.7)), url("/assets/header.jpg");
    min-height: 15em;
    height: 50%;
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    height: 100vh;    
}
.hero h1,
.hero p {
    color: #fff;
}

.hero__text {
    text-align: center;
    max-width: 55ch;
}

.hero__header {
    align-self: center;
    margin-bottom: 0.5em;
    font-weight: 700;
}

.hero__text p {
    font-weight: 300;
}
/* END Hero */

/* Feature Section */
.feature {
    margin: 0 auto;
}

.feature-title {
    text-align: center;
}

.card {
    box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
    border-top: 6px solid rgba(52, 79, 170, 0.9);
    padding: 0.5em 1em 0.5em;
    border-radius: 4px;
}

.card__img {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0.5em 0 0.5em;
}

.card-content__title {
    margin-bottom: 0.9em;
    text-align: center;
    font-weight: 800;
}

.card-content__descr,
ul li, p {
    color: #353434;
}

/* END Feature section */
/* Services */
.services__list li,
.reasons li {
    padding: 12px 10px;
    border-radius: 4px;
    background-color: rgb(247, 247, 247);
    margin-bottom: 0.3em;
}

.services__list li::before,
.reasons li::before {
    content: "\2022";
    display: inline-block;
    width: 1em;
    color: rgba(52, 79, 170, 0.9);
}

.services__link {
    text-align: center;
}
/* END Services */
/* Guarantee */
.guarantee {
    background: rgba(52, 79, 170, 0.9);
    color: #fff;
    padding: 1.5em 0.5em;
}
.guarantee p {
    color: #fff;
}

.guarantee figure {
    text-align: center;
}
/* END Guarantee */
/* Form */
.form p + p {
    display: flex;
    justify-content: flex-end;
    padding: 0.5em;
}
.form p + p > label {
    padding: .5em 1em .5em 0;
    flex: 1;
}
.form p + p > input {
    flex: 2;
}

.form p + p > input,

.form p + p > button {
    padding: 0.5em;
}
.form p + p > button {
    margin-right: auto;
}
/* END Form */

/* Button styles */
.btn {
    color: #fff;
    text-transform: uppercase;
    text-decoration: none;
    padding: 15px;
    border-radius: 5px;
    display: inline-block;
    border: none;
    transition: all 0.4s ease 0s;
}

.btn__primary--color {
    background: #ed3330;
}

.btn:hover {
    letter-spacing: 1px;
    -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
    -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
    box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
    transition: all 0.4s ease 0s;
    }

.btn__primary--color:hover {
    background: #f13d3a;
}

/* End button styles */

.hidden {
    display: none;
}

